<resources>
    <string name="app_name">DKN List Movies</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="app_tab_movies">Movies</string>
    <string name="app_tab_tv_show">TV Show</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_user_score">User Score</string>
</resources>